# QBF_Experiments

QBF_solve_inst/: solver_sources.txt
QBF_solve_inst/feature_extraction/: Aqme.java  AqmeClassifier.java  ClassifierManager.java  Constraint.java  Feature.java  FeatureManager.java  Matrix.java  Prefix.java  PrefixSet.java  QbfFeatureDistribution.java  QbfFeatureManager.java  QbfFormula.java  QbfFormulaBased.java  QbfManager.java  QbfParser.java  QbfRatio.java  QbfVariable.java  Statistics.java  Strategy.java
QBF_solve_inst/feature_extraction/run_on_instances/: FEATURE_COSTS  batch_script_gen_feat_ext  failed_feat_extraction_list  find_missing_instances  res_to_feat_val  submit
QBF_solve_inst/feature_extraction/run_on_instances/feat_ext_res/: 1394diag_ioctl.c.qdimacs  1394diag_isochapi.c.qdimacs  1qbf-5cnf-160var-1280cl.0.qdimacs  1qbf-5cnf-160var-1280cl.1.qdimacs  1qbf-5cnf-160var-1280cl.2.qdimacs  1qbf-5cnf-160var-1280cl.3.qdimacs  1qbf-5cnf-160var-1280cl.4.qdimacs  1qbf-5cnf-160var-1280cl.5.qdimacs  1qbf-5cnf-160var-1280cl.6.qdimacs  1qbf-5cnf-160var-1280cl.7.qdimacs  1qbf-5cnf-160var-1280cl.8.qdimacs  1qbf-5cnf-160var-1280cl.9.qdimacs  1qbf-5cnf-160var-2560cl.0.qdimacs  1qbf-5cnf-160var-2560cl.1.qdimacs  1qbf-5cnf-160var-2560cl.2.qdimacs  1qbf-5cnf-160var-2560cl.3.qdimacs  1qbf-5cnf-160var-2560cl.4.qdimacs  1qbf-5cnf-160var-2560cl.5.qdimacs  1qbf-5cnf-160var-2560cl.6.qdimacs  1qbf-5cnf-160var-2560cl.7.qdimacs  1qbf-5cnf-160var-2560cl.8.qdimacs  1qbf-5cnf-160var-2560cl.9.qdimacs  1qbf-5cnf-160var-320cl.0.qdimacs  1qbf-5cnf-160var-320cl.1.qdimacs  1qbf-5cnf-160var-320cl.2.qdimacs  1qbf-5cnf-160var-320cl.3.qdimacs  1qbf-5cnf-160var-320cl.4.qdimacs  (+27475 more)
QBF_solve_inst/instances_2020/: BEQ-N-100.qdimacs  CR-N-100.qdimacs  CR-N-40.qdimacs  CR-N-50.qdimacs  EQ2-N-100.qdimacs  EQ2-N-30.qdimacs  EQ2-N-40.qdimacs  EQ2-N-50.qdimacs  KBKF_LD-N-100.qdimacs  LONSING-N-20.qdimacs  LONSING-N-30.qdimacs  LONSING-N-40.qdimacs  LONSING-N-50.qdimacs  LQ_PARITY-N-3.qdimacs  TRAP-N-15.qdimacs  TRAP-N-20.qdimacs  TRAP-N-30.qdimacs  TRAP-N-40.qdimacs  TRAP-N-50.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#3.s#18.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#5.s#13.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#5.s#17.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#5.s#20.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#7.s#10.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#7.s#16.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#7.s#18.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#7.s#19.asp.qdimacs  ctrl.e#1.a#3.E#128.A#48.c#.w#7.s#20.asp.qdimacs
QBF_solve_inst/solvers_by_year/2015_and_before/: nenofex
QBF_solve_inst/solvers_by_year/2016/: depqbf  picosat
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/: CHANGES  CMakeLists.txt  README
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/libs/antom/: CMakeLists.txt
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/libs/antom/Core/: allocator.h  clause.h  control.h  core.h  helper.h  reason.h  solverstate.cpp  statistics.h  varheap.h  watcher.h
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/libs/antom/prepro/: bce.cpp  bce.h  bva.cpp  bva.h  hte.cpp  hte.h  modelrebuilder.cpp  modelrebuilder.h  preprocessor.cpp  preprocessor.h  upla.cpp  upla.h
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/libs/antom/solver/: antom.cpp  antom.h  antombase.cpp  antombase.h  circuit.cpp  debug.cpp  lifting.cpp  main.cpp  parser.cpp  parser.h  softclause.h  solverproxy.cpp  solverproxy.h  sorter.cpp  sorter.h
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/libs/easylogging/: CMakeLists.txt  easylogging++.cpp
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/libs/picosat/: CMakeLists.txt
QBF_solve_inst/solvers_by_year/2017/hqspre-1.3/hqspre-1.3/src/: CMakeLists.txt  aux.hpp  bool_vector.cpp  bool_vector.hpp  bool_vector.ipp  clause.cpp  clause.hpp  clause.ipp  exceptions.hpp  formula.cpp  formula.hpp  formula.ipp  formula_blocked_et_al.cpp  formula_blocked_et_al.ipp  formula_debug.cpp  formula_dep_elim.cpp  formula_dep_schemes.cpp  formula_equiv_contra.cpp  formula_experimental.cpp  formula_gate_interface.cpp  formula_gates.cpp  formula_inout.cpp  formula_resolution.cpp  formula_sat.cpp  formula_substitute.cpp  formula_subsumption.cpp  formula_unit_pure.cpp  formula_univ_expand.cpp  formula_univ_red.cpp  gate.cpp  gate.hpp  literal.hpp  main.cpp  main_solver.cpp  prefix.cpp  prefix.hpp  prefix.ipp  process_limits.hpp  sat_solver.hpp  settings.cpp  (+3 more)
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/: .gitignore  CMakeLists.txt  LitTuple.cc  LitTuple.hh  Makefile  MySolver.cc  MySolver.hh  QuantifiedFormula.cc  QuantifiedFormula.hh  README.txt  ReadException.cc  ReadException.hh  ReadQ.cc  ReadQ.hh  Reader.cc  Reader.hh  SolverOptions.cc  SolverOptions.hh  auxiliary.hh  debug.hh  dokuconfig  main.cc  parse_utils.hh  qtypes.cc  qtypes.hh
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/abcdsat/abcdsat/core/: Stack_PPS.h
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/examples/: e1.q
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/examples/sat/: x4-2.q
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/lingeling/: ilingeling  lglcfg.h  lglddtrace  lglmbt  lgluntrace  lingeling  plingeling  reminder  treengeling
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/minisat/core/: Solver.cc  Solver.h
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/picosat/: picogcnf  picomcs  picomus  picosat
QBF_solve_inst/solvers_by_year/2017/ijtihad/ijtihad-master/tools/: blocksqbf  bloqqer  cqbf-conv.py  ctimeout.sh  generate_tests.sh  ghostq  preprocess.sh  results-ghostq.txt  results-mysolver.txt  results.txt  sort_tests_ghostq.sh  sort_tests_mysolver.sh  sort_tests_rareqs.sh  test_mysolver.sh  test_random.sh  test_rareqs.sh  test_solver.sh  test_solvers.sh  time
QBF_solve_inst/solvers_by_year/2018/: qfun
QBF_solve_inst/solvers_by_year/2019/: quabs
QBF_solve_inst/solvers_by_year/2020/: qute
scripts/: Configuration_qbfexample  sequential_test_v3-qbf.py  submit_jobs.sh
(+30648 files in other folders)
